- Fix fonts on Android - see http://stackoverflow.com/questions/3200069/css-fonts-on-android/4520467

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,3 @@
-@font-face {
-	font-family: 'LeagueGothicRegular';
-	src: url('/static/fonts/League_Gothic-webfont.eot');
-	src: local('☺'), url('/static/fonts/League_Gothic-webfont.woff') format('woff'), url('/static/fonts/League_Gothic-webfont.ttf') format('truetype'), url('/static/fonts/League_Gothic-webfont.svg#webfontOTINA1xY') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
 html, body {
 	display:table;
 	height:100%;
@@ -32,7 +24,9 @@ a {
 }
 
 
-/* a:hover {text-decoration:underline;} */
+/* a:hover {
+    text-decoration:underline;
+} */
 
 input, textarea {
 	font:100% Georgia, "Times New Roman", Times, sans-serif;
@@ -141,6 +135,7 @@ form, fieldset {
     overflow:hidden;
     padding: 3px 12px;
 	height: 28px;    
+	min-height: 28px;
 	min-width: 105px;
 }
 
